--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,6 +21,7 @@ pipeline {
                     // Apply the Terraform plan
                     sh """
                     cd terraform
+                    terraform init
                     terraform apply -auto-approve
                     cd ..
                     """
