--- a/application/Jenkinsfile
+++ b/application/Jenkinsfile
@@ -26,5 +26,15 @@ pipeline {
                 '''
             }
         }
+
+        stage('Deploy') {
+            steps {
+                sh '''
+                kubectl apply -f k8s/deployment.yml
+                kubectl apply -f k8s/service.yml
+                '''
+
+            }
+        }
     }
 }
