--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,7 +40,9 @@ pipeline {
         stage('Setup Ansible') {
             steps {
                 sh """
-                cd ansible
+                cd terraform
+                private_ip=$(terraform output --raw Private_instance_ip)
+                cd ../ansible
                 ansible-playbook -i inventory setup-k3s.yml 
                 ansible-playbook -i inventory setup-proxy.yml
                 """
