--- a/application/Jenkinsfile
+++ b/application/Jenkinsfile
@@ -30,8 +30,8 @@ pipeline {
         stage('Deploy') {
             steps {
                 sh '''
-                kubectl apply -f k8s/deployment.yml
-                kubectl apply -f k8s/service.yml
+                kubectl apply -f application/k8s/deployment.yml
+                kubectl apply -f application/k8s/service.yml
                 '''
 
             }
