--- a/application/Jenkinsfile
+++ b/application/Jenkinsfile
@@ -32,8 +32,8 @@ pipeline {
                 sh '''
                     scp -r application/k8s private:/home/ubuntu/app
                     ssh -o StrictHostKeyChecking=no private << EOF
-                    sudo kubectl apply -f app/k8s/deployment.yml
-                    sudo kubectl apply -f app/k8s/service.yml
+                    sudo kubectl apply -f app/deployment.yml
+                    sudo kubectl apply -f app/service.yml
                     EOF
                 '''
 
