--- a/application/Jenkinsfile
+++ b/application/Jenkinsfile
@@ -31,10 +31,9 @@ pipeline {
             steps {
                 sh '''
                     scp -r application/k8s private:/home/ubuntu/app
-                    ssh -o StrictHostKeyChecking=no private <<
+                    ssh -o StrictHostKeyChecking=no private << EOF
                     sudo kubectl apply -f app/deployment.yml
                     sudo kubectl apply -f app/service.yml
-                    EOF
                 '''
 
             }
