--- a/jenkinsfile
+++ b/jenkinsfile
@@ -52,5 +52,17 @@ pipeline {
             }
         }
     }
-    
+    post {
+        always {
+            echo 'Slack Notifications'
+            script {
+                def color = COLOR_MAP[currentBuild.currentResult] ?: 'warning' // Default to 'warning' if build result is not FAILURE or SUCCESS
+                slackSend (
+                    color: color,
+                    channel: '#pipelines', #channel name
+                    message: "${currentBuild.currentResult} Job ${env.JOB_NAME}\nbuild ${env.BUILD_NUMBER}\nMore info at: ${env.BUILD_URL}"
+                )
+            }
+        }
+    }
 }
